<resources>
    <string name="app_name">bookwhale</string>

    <!-- AppBar -->
    <string name="search">Search</string>
    <string name="notification">Notification</string>

    <!-- BottomMenu -->
    <string name="menu_home">홈</string>
    <string name="menu_heart">찜 목록</string>
    <string name="menu_myPost">내 판매글</string>
    <string name="menu_chat">채팅</string>
    <string name="menu_my">내 정보</string>

    <!-- splash -->
    <string name="checkAutoLogin">유저 정보를 불러오는 중 입니다.</string>

    <!-- Login -->
    <string name="appName_hangul">책 고 래</string>
    <string name="naver_login">NAVER 계정으로 로그인</string>
    <string name="kakao_login">KAKAO 계정으로 로그인</string>

    <!-- Toolbar -->
    <string name="searchHint">통합검색 | Search</string>

    <!-- Error String -->
    <string name="error_noConnect">서버와 연결할 수 없습니다.</string>
    <string name="error400">게시물을 불러올 수 없습니다.</string>
    <string name="error_noArticles">게시물을 불러올 수 없습니다.</string>
    <string name="error_noAccessToken">계정 정보가 만료되었습니다.</string>
    <string name="error_noAllArticle">판매 등록된 글이 없습니다.</string>
    <string name="error_noFavorite">찜 목록이 비어있습니다.</string>
    <string name="error_noMyPost">등록한 판매글이 없습니다.</string>
    <string name="error_unKnown">얘기치 못한 오류가 발생하였습니다. 에러코드:%s</string>

    <!-- my -->
    <string name="updateNameTextView">변경할 닉네임을 적어주세요. (최대 10글자)</string>
    <string name="error_noNickName">변경할 닉네임을 입력하세요.</string>
    <string name="success_logout">성공적으로 로그아웃 하였습니다.</string>
    <string name="success_withdraw">성공적으로 회원탈퇴 하였습니다.</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="hintNickName">닉네임</string>
    <string name="logout">로그아웃</string>
    <string name="withdraw">회원탈퇴</string>

    <!-- system -->
    <string name="finishInfo">뒤로 버튼을 한번 더 누르면 종료합니다.</string>

    <!-- naver -->
    <string name="naver_client_id">f4OhIa4pTWzbQ8Wj6Abp</string>
    <string name="naver_client_name">bookwhale</string>

    <!-- chat -->
    <string name="noChat">개설된 채팅방이 없습니다.</string>
    <string name="doChat">채팅하기</string>
    <string name="update">수정</string>
    <string name="delete">삭제</string>
    <string name="reserved">예약됨</string>
    <string name="soldOut">판매완료</string>

    <!-- detail -->
    <string name="noInputImage">등록된 이미지가 없습니다.</string>
    <string name="price">%s원</string>
    <string name="writer">글 %s</string>
    <string name="publisher">출판 %s</string>

    <!-- dummy -->
    <string name="tooLongText">이 웹페이지를 제대로 표시하려면 이전에 입력한 데이터가 필요합니다. 이 데이터를 다시 보낼 수 있지만 이 경우 해당 페이지에서 이전에 수행한 작업이 반복됩니다.
페이지 로드에 필요한 데이터를 다시 제출하려면 새로고침 버튼을 누릅니다.이 웹페이지를 제대로 표시하려면 이전에 입력한 데이터가 필요합니다. 이 데이터를 다시 보낼 수 있지만 이 경우 해당 페이지에서 이전에 수행한 작업이 반복됩니다.
페이지 로드에 필요한 데이터를 다시 제출하려면 새로고침 버튼을 누릅니다.이 웹페이지를 제대로 표시하려면 이전에 입력한 데이터가 필요합니다. 이 데이터를 다시 보낼 수 있지만 이 경우 해당 페이지에서 이전에 수행한 작업이 반복됩니다.
페이지 로드에 필요한 데이터를 다시 제출하려면 새로고침 버튼을 누릅니다.이 웹페이지를 제대로 표시하려면 이전에 입력한 데이터가 필요합니다. 이 데이터를 다시 보낼 수 있지만 이 경우 해당 페이지에서 이전에 수행한 작업이 반복됩니다.
페이지 로드에 필요한 데이터를 다시 제출하려면 새로고침 버튼을 누릅니다.</string>

    <!-- post -->
    <string name="searchBookName">책을 검색해주세요</string>
    <string name="inputError_image">사진 정보를 최소 1장 이상 올려야합니다.</string>
    <string name="inputError_title">글 제목을 입력하세요.</string>
    <string name="inputError_price">가격을 입력하세요.</string>
    <string name="inputError_status">책 상태를 선택하세요.</string>
    <string name="inputError_location">판매 위치를 선택하세요.</string>
    <string name="inputError_description">글 내용을 입력하세요.</string>
    <string name="loadError_searchBook">책 정보를 불러오는데 실패하였습니다.</string>
    <string name="bookWriter">글</string>
    <string name="bookPublisher">출판</string>
    <string name="bookPrice">가격</string>
    <string name="articleTitle">제목</string>
    <string name="articlePrice">가격</string>
    <string name="articleStatus">상태</string>
    <string name="statusBest">최상</string>
    <string name="location">지역</string>
    <string name="statusHigh">상</string>
    <string name="statusMid">중</string>
    <string name="statusLow">하</string>
    <string name="inputDescription">내용을 입력하세요</string>
    <string name="photoCount">0/5</string>
    <string name="maxImageNum">이미지는 최대 5개까지 업로드 가능합니다.</string>
    <string name="currentImageNum">%d/5</string>

    <!-- chat -->
    <string name="noChatMessage">대화 내역이 없습니다.</string>
    <string name="alreadyExistRoom">이미 존재하는 채팅방 입니다.</string>
    <string name="exitChatRoom">채팅방을 나가시겠습니까?</string>
    <string name="destroyChatRoom">종료된 채팅방입니다.</string>
    <string name="exitChatRoomDescription">채팅방 나가기</string>
    <string name="moveToChatRoom">이동</string>

    <!-- update -->
    <string name="delete_question">삭제하시겠습니까? \n삭제는 판매중의 글만 가능합니다.</string>
    <string name="reserved_question">예약 상태로 변경합니다.</string>
    <string name="reserved_undo">판매중 상태로 변경합니다.</string>
    <string name="soldOut_question">판매 완료 상태로 변경하시겠습니까? 되돌릴 수 없습니다.</string>
    <string name="soldOut_undo">판매 완료 상태는 변경할 수 없습니다.</string>
    <string name="deleted">성공적으로 삭제하였습니다.</string>
    <string name="deleted_fail">판매중의 글만 삭제할 수 있습니다.</string>

</resources>